// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be the sames as the last snapshot when render coupon list 1`] = `
<div class="van-coupon-list">
  <div class="van-coupon-list__exchange-bar">
    <div class="van-cell van-cell--borderless van-field van-coupon-list__field">
      <div class="van-cell__value van-field__value">
        <div class="van-field__body">
          <input
            type="text"
            id="van-field-input"
            class="van-field__control"
            placeholder="Coupon code"
          >
        </div>
      </div>
    </div>
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--plain van-button--disabled van-coupon-list__exchange"
      disabled
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Exchange
        </span>
      </div>
    </button>
  </div>
  <div class="van-tabs van-tabs--line van-coupon-list__tab">
    <div class="van-tabs__wrap">
      <div
        role="tablist"
        class="van-tabs__nav van-tabs__nav--line"
        aria-orientation="horizontal"
      >
        <div
          id="van-tabs-0"
          role="tab"
          class="van-tab van-tab--line van-tab--active"
          tabindex="0"
          aria-selected="true"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Available (6)
          </span>
        </div>
        <div
          id="van-tabs-1"
          role="tab"
          class="van-tab van-tab--line"
          tabindex="-1"
          aria-selected="false"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Unavailable (2)
          </span>
        </div>
        <div
          class="van-tabs__line"
          style="transform: translateX(50px) translateX(-50%);"
        >
        </div>
      </div>
    </div>
    <div class="van-tabs__content">
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="0"
        aria-labelledby="van-tabs-0"
        style
      >
        <div
          class="van-coupon-list__list van-coupon-list__list--with-bottom"
          style="height: 724px;"
        >
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2 class="van-coupon__amount">
                </h2>
                <p class="van-coupon__condition">
                  Unlimited
                </p>
              </div>
              <div class="van-coupon__body">
                <p class="van-coupon__name">
                </p>
                <p class="van-coupon__valid">
                  2017.03.10 - 2017.12.30
                </p>
                <div
                  role="checkbox"
                  class="van-checkbox van-coupon__corner"
                  tabindex="0"
                  aria-checked="false"
                >
                  <div class="van-checkbox__icon van-checkbox__icon--round">
                    <i class="van-badge__wrapper van-icon van-icon-success">
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2 class="van-coupon__amount">
                  <span>
                    ¥
                  </span>
                  1.5
                </h2>
                <p class="van-coupon__condition">
                  Unlimited
                </p>
              </div>
              <div class="van-coupon__body">
                <p class="van-coupon__name">
                  name
                </p>
                <p class="van-coupon__valid">
                  2017.03.10 - 2017.12.30
                </p>
                <div
                  role="checkbox"
                  class="van-checkbox van-coupon__corner"
                  tabindex="0"
                  aria-checked="true"
                >
                  <div class="van-checkbox__icon van-checkbox__icon--round van-checkbox__icon--checked">
                    <i class="van-badge__wrapper van-icon van-icon-success">
                    </i>
                  </div>
                </div>
              </div>
            </div>
            <p class="van-coupon__description">
              description
            </p>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2 class="van-coupon__amount">
                  <span>
                    ¥
                  </span>
                  1
                </h2>
                <p class="van-coupon__condition">
                  Unlimited
                </p>
              </div>
              <div class="van-coupon__body">
                <p class="van-coupon__name">
                  name
                </p>
                <p class="van-coupon__valid">
                  2017.03.10 - 2017.12.30
                </p>
                <div
                  role="checkbox"
                  class="van-checkbox van-coupon__corner"
                  tabindex="0"
                  aria-checked="false"
                >
                  <div class="van-checkbox__icon van-checkbox__icon--round">
                    <i class="van-badge__wrapper van-icon van-icon-success">
                    </i>
                  </div>
                </div>
              </div>
            </div>
            <p class="van-coupon__description">
              description
            </p>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2 class="van-coupon__amount">
                  <span>
                    ¥
                  </span>
                  1.23
                </h2>
                <p class="van-coupon__condition">
                  Unlimited
                </p>
              </div>
              <div class="van-coupon__body">
                <p class="van-coupon__name">
                  name
                </p>
                <p class="van-coupon__valid">
                  2017.03.10 - 2017.12.30
                </p>
                <div
                  role="checkbox"
                  class="van-checkbox van-coupon__corner"
                  tabindex="0"
                  aria-checked="false"
                >
                  <div class="van-checkbox__icon van-checkbox__icon--round">
                    <i class="van-badge__wrapper van-icon van-icon-success">
                    </i>
                  </div>
                </div>
              </div>
            </div>
            <p class="van-coupon__description">
              description
            </p>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2 class="van-coupon__amount">
                  88% off
                </h2>
                <p class="van-coupon__condition">
                  At least 0.5
                </p>
              </div>
              <div class="van-coupon__body">
                <p class="van-coupon__name">
                  name
                </p>
                <p class="van-coupon__valid">
                  2017.03.10 - 2017.12.30
                </p>
                <div
                  role="checkbox"
                  class="van-checkbox van-coupon__corner"
                  tabindex="0"
                  aria-checked="false"
                >
                  <div class="van-checkbox__icon van-checkbox__icon--round">
                    <i class="van-badge__wrapper van-icon van-icon-success">
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2 class="van-coupon__amount">
                  90% off
                </h2>
                <p class="van-coupon__condition">
                  At least 0.5
                </p>
              </div>
              <div class="van-coupon__body">
                <p class="van-coupon__name">
                  name
                </p>
                <p class="van-coupon__valid">
                  2017.03.10 - 2017.12.30
                </p>
                <div
                  role="checkbox"
                  class="van-checkbox van-coupon__corner"
                  tabindex="0"
                  aria-checked="false"
                >
                  <div class="van-checkbox__icon van-checkbox__icon--round">
                    <i class="van-badge__wrapper van-icon van-icon-success">
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="-1"
        aria-labelledby="van-tabs-1"
        style="display: none;"
      >
      </div>
    </div>
  </div>
  <div class="van-coupon-list__bottom">
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--block van-button--round van-coupon-list__close"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Close
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`should have two "van-coupon-list__empty" classes when render coupon list is empty 1`] = `
<div class="van-coupon-list">
  <div class="van-coupon-list__exchange-bar">
    <div class="van-cell van-cell--borderless van-field van-coupon-list__field">
      <div class="van-cell__value van-field__value">
        <div class="van-field__body">
          <input
            type="text"
            id="van-field-input"
            class="van-field__control"
            placeholder="Coupon code"
          >
        </div>
      </div>
    </div>
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--plain van-button--disabled van-coupon-list__exchange"
      disabled
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Exchange
        </span>
      </div>
    </button>
  </div>
  <div class="van-tabs van-tabs--line van-coupon-list__tab">
    <div class="van-tabs__wrap">
      <div
        role="tablist"
        class="van-tabs__nav van-tabs__nav--line"
        aria-orientation="horizontal"
      >
        <div
          id="van-tabs-0"
          role="tab"
          class="van-tab van-tab--line"
          tabindex="-1"
          aria-selected="false"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Available (0)
          </span>
        </div>
        <div
          id="van-tabs-1"
          role="tab"
          class="van-tab van-tab--line van-tab--active"
          tabindex="0"
          aria-selected="true"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Unavailable (0)
          </span>
        </div>
        <div
          class="van-tabs__line"
          style="transform: translateX(50px) translateX(-50%);"
        >
        </div>
      </div>
    </div>
    <div class="van-tabs__content">
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="-1"
        aria-labelledby="van-tabs-0"
        style="display: none;"
      >
        <div
          class="van-coupon-list__list van-coupon-list__list--with-bottom"
          style="height: 724px;"
        >
          <div class="van-empty">
            <div class="van-empty__image">
              <svg viewbox="0 0 160 160">
                <defs>
                  <linearGradient
                    x1="50%"
                    x2="50%"
                    y2="100%"
                    id="van-empty-5"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    x1="95%"
                    y1="48%"
                    x2="5.5%"
                    y2="51%"
                    id="van-empty-6"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    y1="45%"
                    x2="100%"
                    y2="54%"
                    id="van-empty-7"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <defs>
                  <linearGradient
                    id="van-empty-a"
                    x1="64%"
                    y1="100%"
                    x2="64%"
                  >
                    <stop
                      stop-color="#FFF"
                      offset="0%"
                      stop-opacity="0.5"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M36 131V53H16v20H2v58h34z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                  <path
                    d="M123 15h22v14h9v77h-31V15z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                </g>
                <defs>
                  <linearGradient
                    id="van-empty-b"
                    x1="64%"
                    y1="97%"
                    x2="64%"
                    y2="0%"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                      stop-opacity="0.3"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M87 6c3 0 7 3 8 6a8 8 0 1 1-1 16H80a7 7 0 0 1-8-6c0-4 3-7 6-7 0-5 4-9 9-9Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                  <path
                    d="M19 23c2 0 3 1 4 3 2 0 4 2 4 4a4 4 0 0 1-4 3v1h-7v-1l-1 1c-2 0-3-2-3-4 0-1 1-3 3-3 0-2 2-4 4-4Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                </g>
                <g
                  transform="translate(36 50)"
                  fill="none"
                >
                  <g transform="translate(8)">
                    <rect
                      fill="#EBEDF0"
                      opacity=".6"
                      x="38"
                      y="13"
                      width="36"
                      height="53"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="url(#van-empty-5)"
                      width="64"
                      height="66"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="#FFF"
                      x="6"
                      y="6"
                      width="52"
                      height="55"
                      rx="1"
                    >
                    </rect>
                    <g
                      transform="translate(15 17)"
                      fill="url(#van-empty-6)"
                    >
                      <rect
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                      <path d="M0 14h34v6H0z">
                      </path>
                      <rect
                        y="28"
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                    </g>
                  </g>
                  <rect
                    fill="url(#van-empty-7)"
                    y="61"
                    width="88"
                    height="28"
                    rx="1"
                  >
                  </rect>
                  <rect
                    fill="#F7F8FA"
                    x="29"
                    y="72"
                    width="30"
                    height="6"
                    rx="1"
                  >
                  </rect>
                </g>
              </svg>
            </div>
            <div class="van-empty__bottom">
              <p class="van-coupon-list__empty-tip">
                No coupons
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="0"
        aria-labelledby="van-tabs-1"
        style
      >
        <div
          class="van-coupon-list__list van-coupon-list__list--with-bottom"
          style="height: 724px;"
        >
          <div class="van-empty">
            <div class="van-empty__image">
              <svg viewbox="0 0 160 160">
                <defs>
                  <linearGradient
                    x1="50%"
                    x2="50%"
                    y2="100%"
                    id="van-empty-5"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    x1="95%"
                    y1="48%"
                    x2="5.5%"
                    y2="51%"
                    id="van-empty-6"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    y1="45%"
                    x2="100%"
                    y2="54%"
                    id="van-empty-7"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <defs>
                  <linearGradient
                    id="van-empty-a"
                    x1="64%"
                    y1="100%"
                    x2="64%"
                  >
                    <stop
                      stop-color="#FFF"
                      offset="0%"
                      stop-opacity="0.5"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M36 131V53H16v20H2v58h34z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                  <path
                    d="M123 15h22v14h9v77h-31V15z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                </g>
                <defs>
                  <linearGradient
                    id="van-empty-b"
                    x1="64%"
                    y1="97%"
                    x2="64%"
                    y2="0%"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                      stop-opacity="0.3"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M87 6c3 0 7 3 8 6a8 8 0 1 1-1 16H80a7 7 0 0 1-8-6c0-4 3-7 6-7 0-5 4-9 9-9Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                  <path
                    d="M19 23c2 0 3 1 4 3 2 0 4 2 4 4a4 4 0 0 1-4 3v1h-7v-1l-1 1c-2 0-3-2-3-4 0-1 1-3 3-3 0-2 2-4 4-4Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                </g>
                <g
                  transform="translate(36 50)"
                  fill="none"
                >
                  <g transform="translate(8)">
                    <rect
                      fill="#EBEDF0"
                      opacity=".6"
                      x="38"
                      y="13"
                      width="36"
                      height="53"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="url(#van-empty-5)"
                      width="64"
                      height="66"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="#FFF"
                      x="6"
                      y="6"
                      width="52"
                      height="55"
                      rx="1"
                    >
                    </rect>
                    <g
                      transform="translate(15 17)"
                      fill="url(#van-empty-6)"
                    >
                      <rect
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                      <path d="M0 14h34v6H0z">
                      </path>
                      <rect
                        y="28"
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                    </g>
                  </g>
                  <rect
                    fill="url(#van-empty-7)"
                    y="61"
                    width="88"
                    height="28"
                    rx="1"
                  >
                  </rect>
                  <rect
                    fill="#F7F8FA"
                    x="29"
                    y="72"
                    width="30"
                    height="6"
                    rx="1"
                  >
                  </rect>
                </g>
              </svg>
            </div>
            <div class="van-empty__bottom">
              <p class="van-coupon-list__empty-tip">
                No coupons
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-coupon-list__bottom">
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--block van-button--round van-coupon-list__close"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Close
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`should render list-footer slot correctly 1`] = `
<div class="van-coupon-list">
  <div class="van-coupon-list__exchange-bar">
    <div class="van-cell van-cell--borderless van-field van-coupon-list__field">
      <div class="van-cell__value van-field__value">
        <div class="van-field__body">
          <input
            type="text"
            id="van-field-input"
            class="van-field__control"
            placeholder="Coupon code"
          >
        </div>
      </div>
    </div>
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--plain van-button--disabled van-coupon-list__exchange"
      disabled
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Exchange
        </span>
      </div>
    </button>
  </div>
  <div class="van-tabs van-tabs--line van-coupon-list__tab">
    <div class="van-tabs__wrap">
      <div
        role="tablist"
        class="van-tabs__nav van-tabs__nav--line"
        aria-orientation="horizontal"
      >
        <div
          id="van-tabs-0"
          role="tab"
          class="van-tab van-tab--line"
          tabindex="-1"
          aria-selected="false"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Available (0)
          </span>
        </div>
        <div
          id="van-tabs-1"
          role="tab"
          class="van-tab van-tab--line van-tab--active"
          tabindex="0"
          aria-selected="true"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Unavailable (0)
          </span>
        </div>
        <div
          class="van-tabs__line"
          style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
        >
        </div>
      </div>
    </div>
    <div class="van-tabs__content">
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="-1"
        aria-labelledby="van-tabs-0"
        style="display: none;"
      >
        <div
          class="van-coupon-list__list van-coupon-list__list--with-bottom"
          style="height: 724px;"
        >
          <div class="van-empty">
            <div class="van-empty__image">
              <svg viewbox="0 0 160 160">
                <defs>
                  <linearGradient
                    x1="50%"
                    x2="50%"
                    y2="100%"
                    id="van-empty-5"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    x1="95%"
                    y1="48%"
                    x2="5.5%"
                    y2="51%"
                    id="van-empty-6"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    y1="45%"
                    x2="100%"
                    y2="54%"
                    id="van-empty-7"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <defs>
                  <linearGradient
                    id="van-empty-a"
                    x1="64%"
                    y1="100%"
                    x2="64%"
                  >
                    <stop
                      stop-color="#FFF"
                      offset="0%"
                      stop-opacity="0.5"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M36 131V53H16v20H2v58h34z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                  <path
                    d="M123 15h22v14h9v77h-31V15z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                </g>
                <defs>
                  <linearGradient
                    id="van-empty-b"
                    x1="64%"
                    y1="97%"
                    x2="64%"
                    y2="0%"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                      stop-opacity="0.3"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M87 6c3 0 7 3 8 6a8 8 0 1 1-1 16H80a7 7 0 0 1-8-6c0-4 3-7 6-7 0-5 4-9 9-9Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                  <path
                    d="M19 23c2 0 3 1 4 3 2 0 4 2 4 4a4 4 0 0 1-4 3v1h-7v-1l-1 1c-2 0-3-2-3-4 0-1 1-3 3-3 0-2 2-4 4-4Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                </g>
                <g
                  transform="translate(36 50)"
                  fill="none"
                >
                  <g transform="translate(8)">
                    <rect
                      fill="#EBEDF0"
                      opacity=".6"
                      x="38"
                      y="13"
                      width="36"
                      height="53"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="url(#van-empty-5)"
                      width="64"
                      height="66"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="#FFF"
                      x="6"
                      y="6"
                      width="52"
                      height="55"
                      rx="1"
                    >
                    </rect>
                    <g
                      transform="translate(15 17)"
                      fill="url(#van-empty-6)"
                    >
                      <rect
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                      <path d="M0 14h34v6H0z">
                      </path>
                      <rect
                        y="28"
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                    </g>
                  </g>
                  <rect
                    fill="url(#van-empty-7)"
                    y="61"
                    width="88"
                    height="28"
                    rx="1"
                  >
                  </rect>
                  <rect
                    fill="#F7F8FA"
                    x="29"
                    y="72"
                    width="30"
                    height="6"
                    rx="1"
                  >
                  </rect>
                </g>
              </svg>
            </div>
            <div class="van-empty__bottom">
              <p class="van-coupon-list__empty-tip">
                No coupons
              </p>
            </div>
          </div>
          List Footer
        </div>
      </div>
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="0"
        aria-labelledby="van-tabs-1"
        style
      >
        <div
          class="van-coupon-list__list van-coupon-list__list--with-bottom"
          style="height: 724px;"
        >
          <div class="van-empty">
            <div class="van-empty__image">
              <svg viewbox="0 0 160 160">
                <defs>
                  <linearGradient
                    x1="50%"
                    x2="50%"
                    y2="100%"
                    id="van-empty-5"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    x1="95%"
                    y1="48%"
                    x2="5.5%"
                    y2="51%"
                    id="van-empty-6"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                  <linearGradient
                    y1="45%"
                    x2="100%"
                    y2="54%"
                    id="van-empty-7"
                  >
                    <stop
                      stop-color="#EAEDF1"
                      offset="0%"
                    >
                    </stop>
                    <stop
                      stop-color="#DCDEE0"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <defs>
                  <linearGradient
                    id="van-empty-a"
                    x1="64%"
                    y1="100%"
                    x2="64%"
                  >
                    <stop
                      stop-color="#FFF"
                      offset="0%"
                      stop-opacity="0.5"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M36 131V53H16v20H2v58h34z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                  <path
                    d="M123 15h22v14h9v77h-31V15z"
                    fill="url(#van-empty-a)"
                  >
                  </path>
                </g>
                <defs>
                  <linearGradient
                    id="van-empty-b"
                    x1="64%"
                    y1="97%"
                    x2="64%"
                    y2="0%"
                  >
                    <stop
                      stop-color="#F2F3F5"
                      offset="0%"
                      stop-opacity="0.3"
                    >
                    </stop>
                    <stop
                      stop-color="#F2F3F5"
                      offset="100%"
                    >
                    </stop>
                  </linearGradient>
                </defs>
                <g opacity=".8">
                  <path
                    d="M87 6c3 0 7 3 8 6a8 8 0 1 1-1 16H80a7 7 0 0 1-8-6c0-4 3-7 6-7 0-5 4-9 9-9Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                  <path
                    d="M19 23c2 0 3 1 4 3 2 0 4 2 4 4a4 4 0 0 1-4 3v1h-7v-1l-1 1c-2 0-3-2-3-4 0-1 1-3 3-3 0-2 2-4 4-4Z"
                    fill="url(#van-empty-b)"
                  >
                  </path>
                </g>
                <g
                  transform="translate(36 50)"
                  fill="none"
                >
                  <g transform="translate(8)">
                    <rect
                      fill="#EBEDF0"
                      opacity=".6"
                      x="38"
                      y="13"
                      width="36"
                      height="53"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="url(#van-empty-5)"
                      width="64"
                      height="66"
                      rx="2"
                    >
                    </rect>
                    <rect
                      fill="#FFF"
                      x="6"
                      y="6"
                      width="52"
                      height="55"
                      rx="1"
                    >
                    </rect>
                    <g
                      transform="translate(15 17)"
                      fill="url(#van-empty-6)"
                    >
                      <rect
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                      <path d="M0 14h34v6H0z">
                      </path>
                      <rect
                        y="28"
                        width="34"
                        height="6"
                        rx="1"
                      >
                      </rect>
                    </g>
                  </g>
                  <rect
                    fill="url(#van-empty-7)"
                    y="61"
                    width="88"
                    height="28"
                    rx="1"
                  >
                  </rect>
                  <rect
                    fill="#F7F8FA"
                    x="29"
                    y="72"
                    width="30"
                    height="6"
                    rx="1"
                  >
                  </rect>
                </g>
              </svg>
            </div>
            <div class="van-empty__bottom">
              <p class="van-coupon-list__empty-tip">
                No coupons
              </p>
            </div>
          </div>
          Disabled List Footer
        </div>
      </div>
    </div>
  </div>
  <div class="van-coupon-list__bottom">
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--block van-button--round van-coupon-list__close"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Close
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`should use custom src when using empty-image prop 1`] = `
<div class="van-coupon-list">
  <div class="van-coupon-list__exchange-bar">
    <div class="van-cell van-cell--borderless van-field van-coupon-list__field">
      <div class="van-cell__value van-field__value">
        <div class="van-field__body">
          <input
            type="text"
            id="van-field-input"
            class="van-field__control"
            placeholder="Coupon code"
          >
        </div>
      </div>
    </div>
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--plain van-button--disabled van-coupon-list__exchange"
      disabled
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Exchange
        </span>
      </div>
    </button>
  </div>
  <div class="van-tabs van-tabs--line van-coupon-list__tab">
    <div class="van-tabs__wrap">
      <div
        role="tablist"
        class="van-tabs__nav van-tabs__nav--line"
        aria-orientation="horizontal"
      >
        <div
          id="van-tabs-0"
          role="tab"
          class="van-tab van-tab--line van-tab--active"
          tabindex="0"
          aria-selected="true"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Available (0)
          </span>
        </div>
        <div
          id="van-tabs-1"
          role="tab"
          class="van-tab van-tab--line"
          tabindex="-1"
          aria-selected="false"
          aria-controls="van-tab"
        >
          <span class="van-tab__text van-tab__text--ellipsis">
            Unavailable (0)
          </span>
        </div>
        <div
          class="van-tabs__line"
          style="transform: translateX(50px) translateX(-50%);"
        >
        </div>
      </div>
    </div>
    <div class="van-tabs__content">
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="0"
        aria-labelledby="van-tabs-0"
        style
      >
        <div
          class="van-coupon-list__list van-coupon-list__list--with-bottom"
          style="height: 724px;"
        >
          <div class="van-empty">
            <div class="van-empty__image">
              <img src="https://fastly.jsdelivr.net/npm/@vant/assets/xxx.jpeg">
            </div>
            <div class="van-empty__bottom">
              <p class="van-coupon-list__empty-tip">
                No coupons
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="-1"
        aria-labelledby="van-tabs-1"
        style="display: none;"
      >
      </div>
    </div>
  </div>
  <div class="van-coupon-list__bottom">
    <button
      type="button"
      class="van-button van-button--primary van-button--normal van-button--block van-button--round van-coupon-list__close"
    >
      <div class="van-button__content">
        <span class="van-button__text">
          Close
        </span>
      </div>
    </button>
  </div>
</div>
`;
